--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -13,6 +13,10 @@ jobs:
       security-events: write
       actions: read
       contents: read
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'javascript', 'python', 'java' ] 
 
     steps:
       - name: Checkout repository
